force-app/main/default/objects/AV_EmployeeCenterAvg__c/AV_EmployeeCenterAvg__c.object-meta.xml
<CustomObject>
    <description>Almacena la información de la media de empleados asociada a un centro.</description>
    <label>Media de Empleado por Centro</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Media de Empleado por Centro Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media de Empleados por Centro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>