force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_AnnualEmployeeAvgAdjDesc__c.field-meta.xml
<CustomField>
    <fullName>AV_AnnualEmployeeAvgAdjDesc__c</fullName>
    <description>Empleados del centro anual según IGC con el ajuste aplicado y descendientes añadidos (con sus ajustes)</description>
    <label>Media Empleados Anual Ajustada Desc</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>