force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_AvgAdjustment__c.field-meta.xml
<CustomField>
    <fullName>AV_AvgAdjustment__c</fullName>
    <label>Ajuste</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>