force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_Center__c.field-meta.xml
<CustomField>
    <fullName>AV_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Centro</label>
    <length>5</length>
    <type>Text</type>
</CustomField>