force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_GSENNumber__c.field-meta.xml
<CustomField>
    <fullName>AV_GSENNumber__c</fullName>
    <description>Número de gestores senior de una oficina</description>
    <label>GSEN´s Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>