force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_MonthlyEmployeeAvg__c.field-meta.xml
<CustomField>
    <fullName>AV_MonthlyEmployeeAvg__c</fullName>
    <description>Empleados del centro mensual según IGC</description>
    <label>Media Empleados Mensual</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>