force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_MonthlyEmployeeAvgAdj__c.field-meta.xml
<CustomField>
    <fullName>AV_MonthlyEmployeeAvgAdj__c</fullName>
    <label>Media Empleados Mensual Ajustada</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>