force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_MonthlyEmployeeAvgAdjDesc__c.field-meta.xml
<CustomField>
    <fullName>AV_MonthlyEmployeeAvgAdjDesc__c</fullName>
    <description>Empleados del centro mensual según IGC con el ajuste aplicado y descendientes añadidos (con sus ajustes)</description>
    <label>Media Empleados Mensual Ajustada Desc</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>