force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_NumeroDirectores__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroDirectores__c</fullName>
    <label>Número de Directores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>