force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_NumeroGBPs__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroGBPs__c</fullName>
    <label>Número de GBP&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>