force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_NumeroGMICs__c.field-meta.xml
<CustomField>
    <fullName>AV_NumeroGMICs__c</fullName>
    <description>Número de GMIC&apos;s</description>
    <label>Número de GMIC&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>