force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_SegmentoOficina__c.field-meta.xml
<CustomField>
    <fullName>AV_SegmentoOficina__c</fullName>
    <description>Segmento de Oficina</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Segmento de Oficina</label>
    <length>255</length>
    <type>Text</type>
</CustomField>