force-app/main/default/objects/AV_EmployeeCenterAvg__c/fields/AV_TypeOfOffice__c.field-meta.xml
<CustomField>
    <fullName>AV_TypeOfOffice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo de Oficina</label>
    <length>255</length>
    <type>Text</type>
</CustomField>