force-app/main/default/objects/AV_EmployeeCenterAvg__c/recordTypes/AV_EmployeeCenterAvg.recordType-meta.xml
<RecordType>
    <fullName>AV_EmployeeCenterAvg</fullName>
    <active>true</active>
    <label>Media Empleado por Centro</label>
</RecordType>